Refactor calls of URLDecoder and pass Charset instead of String (since Java 10)